@@ -1,3 +1,7 @@
+2013-08-29 Gregory L. Lee <lee218@llnl.gov>
+	* src/STAT_BackEnd.C : set BG/Q timeout value to 10 minutes
+	* src/STAT_BackEnd.C : fixed valgrind-reported uninit memory condition
+
 2013-08-01 Gregory L. Lee <lee218@llnl.gov>
 	* scripts/STATview.py : maintain user zoom for undo/redo
 
